--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     <header>
       <div class="top-container">
-        <h1>I'm Manoj.</h1>
+        <h1>I'm Manoj Kumar.</h1>
         <h2>a <span>pro</span>grammer.</h2>
       </div>
     </header>
