--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     <header>
       <div class="top-container">
-        <h1>I'm Manoj Kumar BP.</h1>
+        <h1>I'm Manoj .</h1>
         <h2>a <span>pro</span>grammer.</h2>
       </div>
     </header>
@@ -111,24 +111,33 @@
           </div>
         </div>
       </div>
-      <div class="contact-me">
-        <h2>Let's Get In Touch</h2>
-        <p>
-          Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales,
-          tellus donec dui, ornare erat.
-        </p>
-        <a class="btn" href="mailto:prabha1578157815781578@gmail.com"
-          >CONTACT ME</a
-        >
-      </div>
     </section>
 
-    <section class="bottom-container">
-      <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
-      <a class="footer-link" href="https://twitter.com/">Twitter</a>
-      <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
-      <p>Handcrafted by Manoj Basaveswara @ twentytwentytwo.</p>
-    </section>
+    <footer>
+      <div class="bottom-container">
+        <div class="contact-me">
+          <h2>Let's Get In Touch</h2>
+          <p>
+            Interested in my work?<br />
+            Want to team up?
+          </p>
+          <div class="click-me">
+            <a class="btn" href="mailto:prabha1578157815781578@gmail.com">
+              <img class="icon" src="/images/click.png" />
+              <span>Click Here</span>
+            </a>
+          </div>
+        </div>
+        <div class="footer-links">
+          <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+          <a class="footer-link" href="https://twitter.com/">Twitter</a>
+          <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+          <p class="copy">
+            Handcrafted by Manoj Basaveswara @ twentytwentytwo.
+          </p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
 <!-- <div class="slider">
