--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
   </head>
   <body>
     <header>
+      <lottie-player src="https://assets3.lottiefiles.com/private_files/lf30_lkcerbfx.json" background="transparent" speed="1"
+         loop autoplay></lottie-player>
       <div class="top-container">
-        <h1>I'm Manoj .</h1>
+        <h1>I'm Manoj.</h1>
         <h2>a <span>pro</span>grammer.</h2>
       </div>
     </header>
@@ -84,7 +86,7 @@
       <div class="skills">
         <h2>What I’ve Got...?</h2>
         <div class="row skill-row">
-          <div class="rectangle">
+          <div class="rectangle rectangle-1">
             <div class="frame">
               <h3>Languages I Code:</h3>
               <li>HTML</li>
@@ -98,7 +100,7 @@
               <li>Designing Responsive <span>Websites</span></li>
             </div>
           </div>
-          <div class="rectangle">
+          <div class="rectangle rectangle-2">
             <div class="frame">
               <h3>Tools I Use:</h3>
               <li>VS Code</li>
@@ -122,22 +124,27 @@
             Want to team up?
           </p>
           <div class="click-me">
-            <a class="btn" href="mailto:prabha1578157815781578@gmail.com">
-              <img class="icon" src="/images/click.png" />
+            <a class="btn" href="mailto:prabha15781578@gmail.com">
+              <!-- <img class="icon" src="/images/click.png" /> -->
               <span>Click Here</span>
             </a>
           </div>
         </div>
         <div class="footer-links">
-          <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
-          <a class="footer-link" href="https://twitter.com/">Twitter</a>
-          <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+          <a class="footer-link" href=""><ion-icon name="logo-linkedin"></ion-icon></a>
+          <a class="footer-link" href=""><ion-icon name="logo-instagram"></ion-icon></a>
+          <a class="footer-link" href=""><ion-icon name="logo-facebook"></ion-icon></a>
+          <a class="footer-link" href=""><ion-icon name="logo-github"></ion-icon></a>
           <p class="copy">
             Handcrafted by Manoj Basaveswara @ twentytwentytwo.
           </p>
         </div>
       </div>
     </footer>
+    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+    
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
   </body>
 </html>
 <!-- <div class="slider">
