--- a/index.html
+++ b/index.html
@@ -14,15 +14,37 @@
       href="https://fonts.googleapis.com/css2?family=Merriweather&family=Poppins&family=Sacramento&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Galindo&family=Montserrat:wght@900&family=Ubuntu&display=swap"
+      rel="stylesheet"
+    />
     <script defer src="script.js"></script>
   </head>
   <body>
     <header>
-      <lottie-player src="https://assets3.lottiefiles.com/private_files/lf30_lkcerbfx.json" background="transparent" speed="1"
-         loop autoplay></lottie-player>
+      <div class="logo-m">M</div>
+      <!-- <lottie-player
+        class="logo-gif"
+        src="https://assets2.lottiefiles.com/packages/lf20_op9td2lu.json"
+        background="transparent"
+        speed="1"
+        style="width: 15rem; height: 15rem"
+        autoplay
+      ></lottie-player> -->
+
+      <lottie-player
+        class="desk-gif"
+        src="https://assets3.lottiefiles.com/private_files/lf30_lkcerbfx.json"
+        background="transparent"
+        speed="1"
+        loop
+        autoplay
+      ></lottie-player>
       <div class="top-container">
-        <h1>I'm Manoj.</h1>
-        <h2>a <span>pro</span>grammer.</h2>
+        <div class="hero-text">
+          <h1>I'm Manoj.</h1>
+          <h2>a <span>pro</span>grammer.</h2>
+        </div>
       </div>
     </header>
     <section class="section-middle">
@@ -131,20 +153,49 @@
           </div>
         </div>
         <div class="footer-links">
-          <a class="footer-link" href=""><ion-icon name="logo-linkedin"></ion-icon></a>
-          <a class="footer-link" href=""><ion-icon name="logo-instagram"></ion-icon></a>
-          <a class="footer-link" href=""><ion-icon name="logo-facebook"></ion-icon></a>
-          <a class="footer-link" href=""><ion-icon name="logo-github"></ion-icon></a>
+          <a
+            class="footer-link"
+            href="https://www.linkedin.com/in/manoj-kumar-34285b20b/"
+            target="_blank"
+            ><ion-icon name="logo-linkedin"></ion-icon
+          ></a>
+          <a
+            class="footer-link"
+            href="https://instagram.com/im_so_riddikulus__?igshid=YmMyMTA2M2Y="
+            target="_blank"
+            ><ion-icon name="logo-instagram"></ion-icon
+          ></a>
+          <a
+            class="footer-link"
+            href="https://m.facebook.com/100013415889454/"
+            target="_blank"
+            ><ion-icon name="logo-facebook"></ion-icon
+          ></a>
+          <a
+            class="footer-link"
+            href="https://github.com/manoj-kumar-429?tab=repositories"
+            target="_blank"
+            ><ion-icon name="logo-github"></ion-icon
+          ></a>
           <p class="copy">
             Handcrafted by Manoj Basaveswara @ twentytwentytwo.
           </p>
         </div>
+        <div class="credits">
+          <a href="credits.html" target="_blank">Credits</a>
+        </div>
       </div>
     </footer>
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-    
-    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
+    ></script>
   </body>
 </html>
 <!-- <div class="slider">
