--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>My Portifolio</title>
     <link rel="stylesheet" href="css/styles.css" />
 
-    <link rel="icon" href="favicon.ico" />
+    <link rel="icon shortcut" type="image/png" href="/images/mk-logo4.svg" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -22,16 +22,36 @@
   </head>
   <body>
     <header>
-      <div class="logo-m">M</div>
-      <!-- <lottie-player
-        class="logo-gif"
-        src="https://assets2.lottiefiles.com/packages/lf20_op9td2lu.json"
-        background="transparent"
-        speed="1"
-        style="width: 15rem; height: 15rem"
-        autoplay
-      ></lottie-player> -->
+      <nav class="nav-bar">
+        <img class="mk" src="/images/mk-logo2.svg" alt="my logo" />
 
+        <div class="nav__items">
+          <ul class="nav__links hidden">
+            <li class="nav__item">
+              <a class="nav__link" href="#section-profile">About</a>
+            </li>
+            <li class="nav__item">
+              <a class="nav__link" href="#section-projects">Projects</a>
+            </li>
+            <li class="nav__item">
+              <a class="nav__link" href="#section-skills">Skills</a>
+            </li>
+            <li class="nav__item">
+              <a class="nav__link btn" href="#section-contact">Contact Me</a>
+            </li>
+          </ul>
+        </div>
+        <img
+          class="ham-menu hidden"
+          src="/images/ham-menu.svg"
+          alt="menu icon"
+        />
+        <img
+          class="cross-menu hidden"
+          src="/images/cross-2.svg"
+          alt="cross icon"
+        />
+      </nav>
       <lottie-player
         class="desk-gif"
         src="https://assets3.lottiefiles.com/private_files/lf30_lkcerbfx.json"
@@ -48,17 +68,17 @@
       </div>
     </header>
     <section class="section-middle">
-      <div class="profile">
+      <div class="profile" id="section-profile">
         <img class="avatar" src="images/mf-avatar.svg" />
         <h2>Hello.</h2>
         <p>
-          I'm a Web Developer. I 💛 to design and code some beautiful websites.
-          Over the years, I've seen hundreds of designs in web and mobile apps.
-          Eventually, I decided that it would be a fun challenge to try
-          designing and building my own.
+          I'm a <span class="developer-text"></span>
+          I 💛 to design and code some beautiful websites. Over the years, I've
+          seen hundreds of designs in web and mobile apps. Eventually, I decided
+          that it would be a fun challenge to try designing and building my own.
         </p>
       </div>
-      <div class="projects">
+      <div class="projects" id="section-projects">
         <h2>My Recent Works</h2>
 
         <div class="row">
@@ -105,7 +125,7 @@
           </a>
         </div>
       </div>
-      <div class="skills">
+      <div class="skills" id="section-skills">
         <h2>What I’ve Got...?</h2>
         <div class="row skill-row">
           <div class="rectangle rectangle-1">
@@ -137,7 +157,7 @@
       </div>
     </section>
 
-    <footer>
+    <footer id="section-contact">
       <div class="bottom-container">
         <div class="contact-me">
           <h2>Let's Get In Touch</h2>
