--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
       rel="stylesheet"
     />
     <link
-      href="https://fonts.googleapis.com/css2?family=Galindo&family=Montserrat:wght@900&family=Ubuntu&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Donegal+One&display=swap"
       rel="stylesheet"
     />
+
     <script defer src="script.js"></script>
   </head>
   <body>
