--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
           </a>
           <a
             class="project project-6"
-            href="https://simon-game-151vw0d96-manoj-kumar-429.vercel.app/"
+            href="https://simon-game-fentiw9t1-manoj-kumar-429.vercel.app"
             alt="Simon Game"
             target="_blank"
           >
