Linkdin link details update

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
         <div class="footer-links">
           <a
             class="footer-link"
-            href="https://www.linkedin.com/in/manoj-kumar-34285b20b/"
+            href="https://https://www.linkedin.com/in/manoj-basaveswara"
             target="_blank"
             ><ion-icon name="logo-linkedin"></ion-icon
           ></a>
